[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/Fonts/Quicksand-Medium.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/GFX/Interface/Login/InputBackground.png" type="Texture" id=2]
[ext_resource path="res://Authentification/Register.gd" type="Script" id=3]
[ext_resource path="res://Assets/GFX/Interface/Login/RegisterButton.png" type="Texture" id=4]
[ext_resource path="res://Assets/GFX/Interface/Login/RegisterButtonDisabled.png" type="Texture" id=5]
[ext_resource path="res://Assets/GFX/Interface/Buttons/ButtonBack.png" type="Texture" id=6]
[ext_resource path="res://Authentification/LoginRegFont.tres" type="DynamicFont" id=7]

[sub_resource type="DynamicFont" id=1]
size = 35
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 700, 150 )
margin_left = 10.0

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 700, 150 )
margin_left = 10.0

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 700, 150 )
margin_left = 10.0

[sub_resource type="DynamicFont" id=5]
size = 42
font_data = ExtResource( 1 )

[node name="Register" type="Control" groups=[
"Auth",
]]
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 1213.08, 628 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UsernameLabel" type="Label" parent="."]
margin_left = 775.0
margin_top = 150.0
margin_right = 1050.0
margin_bottom = 200.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.403922, 0.4, 0.4, 1 )
text = "Benutzername"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Username" type="LineEdit" parent="."]
show_behind_parent = true
margin_left = 775.0
margin_top = 200.0
margin_right = 1475.0
margin_bottom = 350.0
grow_horizontal = 0
grow_vertical = 0
custom_styles/read_only = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/selection_color = Color( 0, 0, 0, 0 )
custom_colors/cursor_color = Color( 0.721569, 0.517647, 0.360784, 1 )
custom_colors/font_color = Color( 0.403922, 0.4, 0.4, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EmailLabel" type="Label" parent="."]
margin_left = 775.0
margin_top = 365.0
margin_right = 1050.0
margin_bottom = 415.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.403922, 0.4, 0.4, 1 )
text = "Email"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Email" type="LineEdit" parent="."]
show_behind_parent = true
margin_left = 775.0
margin_top = 415.0
margin_right = 1475.0
margin_bottom = 565.0
grow_horizontal = 0
grow_vertical = 0
custom_styles/read_only = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/selection_color = Color( 0, 0, 0, 0 )
custom_colors/cursor_color = Color( 0.721569, 0.517647, 0.360784, 1 )
custom_colors/font_color = Color( 0.403922, 0.4, 0.4, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PasswordLabel" type="Label" parent="."]
margin_left = 775.0
margin_top = 585.0
margin_right = 926.0
margin_bottom = 676.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.403922, 0.4, 0.4, 1 )
text = "Passwort
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Password" type="LineEdit" parent="."]
show_behind_parent = true
margin_left = 775.0
margin_top = 635.0
margin_right = 1475.0
margin_bottom = 785.0
grow_horizontal = 0
grow_vertical = 0
custom_styles/read_only = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/selection_color = Color( 0, 0, 0, 0 )
custom_colors/cursor_color = Color( 0.721569, 0.517647, 0.360784, 1 )
custom_colors/font_color = Color( 0.403922, 0.4, 0.4, 1 )
secret = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RegisterButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 1132.91
margin_top = 805.0
margin_right = 1457.91
margin_bottom = 955.0
disabled = true
texture_normal = ExtResource( 4 )
texture_disabled = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="TextureButton" parent="."]
margin_left = 775.0
margin_top = 825.0
margin_right = 1100.0
margin_bottom = 975.0
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="button_down" from="RegisterButton" to="." method="_on_RegisterButton_button_down"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_Registration_completed"]
